syntax = "proto3";
package user.v1;
option go_package = "github.com/adopabianko/commerce/proto/gen/user/v1;userv1";

service UserService {
  // Validate token and return user id
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  uint32 user_id = 1;
  bool valid = 2;
  string error = 3;
}
